--- a/components/m-icon/m-icon.css
+++ b/components/m-icon/m-icon.css
@@ -2,7 +2,7 @@
 	font-family: uniicons;
 	font-weight: normal;
 	font-style: normal;
-	src: url('https://img-cdn-qiniu.dcloud.net.cn/fonts/uni.ttf?t=1536565627510') format('truetype');
+	src: url('https://img-cdn-qiniu.dcloud.net.cn/fonts/uni.ttf') format('truetype');
 }
 
 .m-icon {
@@ -373,5 +373,5 @@
 }
 
 .m-icon-scan:before {
-    content: "\e612";
+	content: "\e612";
 }
