--- a/common/uni.css
+++ b/common/uni.css
@@ -266,23 +266,23 @@ form {
 }
 
 .uni-border {
-	border: 1px solid #eeeeee;
+	border: 2upx solid #eeeeee;
 }
 
 .uni-border-top {
-	border-top: 1px solid #eeeeee;
+	border-top: 2upx solid #eeeeee;
 }
 
 .uni-border-left {
-	border-left: 1px solid #eeeeee;
+	border-left:  2upx solid #eeeeee;
 }
 
 .uni-border-right {
-	border-right: 1px solid #eeeeee;
+	border-right:  2upx solid #eeeeee;
 }
 
 .uni-border-bottom {
-	border-bottom: 1px solid #eeeeee;
+	border-bottom:  2upx solid #eeeeee;
 }
 
 .uni-border-btn-radius {
@@ -342,6 +342,7 @@ form {
 	width: 100%;
 	height: 100upx;
 	line-height: 100upx;
+  z-index: 1000;
 	/* background: #FFFFFF; */
 }
 
